<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:nav="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_new_task"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:title="@string/action_new_task"
        nav:showAsAction="ifRoom|collapseActionView"
        android:visible="false" />

    <item
        android:id="@+id/action_new_note"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:title="@string/action_new_task"
        nav:showAsAction="ifRoom|collapseActionView"
        android:visible="false" />

    <item
        android:id="@+id/action_save_note"
        android:title="@string/action_save_note"
        nav:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/action_toggle_notifications"
        android:title="@string/action_enable_notify"
        nav:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        nav:showAsAction="never" />

    <item
        android:id="@+id/action_all_tasks"
        android:title="@string/action_all_tasks"
        nav:showAsAction="never"
        android:visible="false" />
</menu>