<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:text="short text"
            android:id="@+id/textView1"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:text="--------------------max character amount--------------------"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:text="Schedule Item Name ----- Date"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule_button"
            android:id="@+id/schedule_button"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes_button"
            android:id="@+id/notes_button"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workouts_button"
            android:id="@+id/workouts_button"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_button"
            android:id="@+id/general_button"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp" />

    </LinearLayout>

</LinearLayout>